[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xileh"
version = "0.1.0"
authors = [{ name = "Matthias Dold", email = "matthias.dold@gmx.net" }]
description = "A lightweight, composable pipeline abstraction built around a hierarchical data container."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["pipeline", "data-container", "signal-processing", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "tables",
    "pyyaml",
    "tqdm",
    "rich",
    "tomli-w",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "ruff", "ipython"]
docs = [
    "quartodoc",
    "nbformat",
    "nbclient",
    "jupyter-cache",
    "ipykernel",
    "griffe<2.0.0",
]
build = ["build", "twine"]
all = [
    "xileh[dev,docs,build]",
]

[project.urls]
Homepage = "https://github.com/bsdlab/xileh"
Documentation = "https://bsdlab.github.io/xileh/"
Repository = "https://github.com/bsdlab/xileh"
Issues = "https://github.com/bsdlab/xileh/issues"
Changelog = "https://github.com/bsdlab/xileh/releases"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint.per-file-ignores]
# package re-exports are intentional public API, not unused imports
"__init__.py" = ["F401"]

[tool.coverage.run]
branch = true
source = ["src/xileh"]
