[metadata]
name = xileh
version = 0.0.1
author = Matthias Dold
author_email = matthias.dold@blbt.uni-freiburg.de
description = A module to create pipelines for genetic algorithms
long_description = file: README.md
long_description_content_type = text/markdown
url = 
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = xileh
packages = find:
python_requires = >=3.6

[options.packages.find]
where = xileh
