[metadata]
name = xileh
version = 0.0.1
author = Matthias Dold
author_email = matthias.dold@gmx.net
description = A module to create pipelines for genetic algorithms
long_description = file: README.md
long_description_content_type = text/markdown
url = 
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
tqdm = tqdm
toml = toml
yaml = pyyaml
numpy = numpy
pandas = pandas
